welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: illegal start of simple expression
	}
        ^Poucet:11: error: 'while' expected but 'if' found.
	if(nbBiscuit >= 3)
        ^Poucet:12: error: '(' expected but ';' found.
	{
^